# variados

./: .gitignore  .gitignore.swp  .gitmodules
callback/: compile.sh  main1.c  main2.c
client_server/: CMakeLists.txt
client_server/client/: client.c
client_server/server/: server.c
conan/: CMakeLists.txt  Dockerfile  conanfile.txt  docker-compose.yaml
conan/assets/: index.css  index.html
conan/src/: main.c
dlsym/: main.c
docker/: CMakeLists.txt  Dockerfile
docker-compose/: Dockerfile
docker-compose/src/: main.c
getenv/: Dockerfile  docker-compose.yaml  launch.sh  main.c
maquina_estados/: compile.sh  main1.c  main2.c
oop-abstraction/: CMakeLists.txt  car.c  car.h  car_base.h  car_control.c  car_control.h  main.c
oop-class/: CMakeLists.txt  class_way_1.c  class_way_1.h  class_way_2.c  class_way_2.h  main_way_1.c  main_way_2.c
oop-encapsulation/: CMakeLists.txt  encapsulation-1.c  encapsulation-1.h  encapsulation-2.c  encapsulation-2.h  main-1.c  main-2.c
oop-encapsulation/buidl/: CMakeCache.txt  Makefile  cmake_install.cmake
oop-inheritance/: CMakeLists.txt  developer.c  developer.h  employee.c  employee.h  main.c
oop-polymorphism/: CMakeLists.txt  csv_report.c  csv_report.h  main.c  pdf_report.c  pdf_report.h  report.c  report.h  report_base.h
pointeiro_void/: main1.c  main2.c
ponteiros_de_funcao/: compile.sh  main1.c  main2.c  main3.c  main4.c  main5.c
removendo_ifs_cases/: Makefile  main.c
tipo_opaco/: compile.sh  main.c  person.c  person.h
